Inizio sviluppo domanda di accreditamento provvisorio.
Implementata la sezione provider e sedi.

Manca la sezione Persone...forse da rivedere nelle Entity

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -29,6 +29,15 @@ label.registrazione_provider=Registrazione Provider
 label.profilo=Profilo
 label.info_provider=Info provider
 label.provider=Provider
+label.iter_accreditamento=Iter Accreditamento
+label.eventi=Eventi
+label.piano_formativo=Piano Formativo
+label.relazione_annuale=Relazione Annuale
+label.contributo_annuale=Contributo Annuale
+label.comunicazioni=Comunicazioni
+label.gestione_utenti=Gestione Utenti
+label.gestione_password=Gestione Password
+
 
 ######## REGISTRAZIONE PROVIDER ########
 label.avanti=avanti
@@ -60,6 +69,7 @@ label.seleziona=Seleziona...
 label.conferma=Conferma
 label.crea_account=Crea Account
 label.aggiorna_account=Aggiorna Account
+label.gruppo=Gruppo
 
 ######### UTENTI ########
 label.utenti=Utenti
@@ -78,10 +88,21 @@ label.modifica_profilo=Modifica Profilo
 label.creazione_profilo=Creazione Profilo
 label.permessi=Permessi
 label.nuovo=Nuovo
+label.cambia_password=Cambia password
+label.cambio_password=Cambio password
+label.password_corrente=Password corrente
+label.nuova_password=Nuova Password
+label.conferma_password=Conferma Password
+
+label.sede_legale=Sede Legale
+label.sede_operativa=Sede Operativa
+label.coincide_con_sede_legale=Coincide con Sede Legale
 
 ######### VALIDATOR ERROR MESSAGE #########
 error.invalid=formato non corretto
 error.empty=campo obbligatorio
+NotEmpty=campo obbligatorio
+NotNull=campo obbligatorio
 error.min=valore troppo corto
 error.max=valore troppo lungo
 error.number_min=valore inferiore al valore minimo consentito
@@ -89,13 +110,76 @@ error.number_max=valore superiore al valore massimo consentito
 error.url=URL errato
 error.number=il valore deve essere numerico
 error.email=email non valida
+Email=email non valida
 error.email_repeat=l'email deve coincidere
-error.password_repeat=la password deve coincidere
+error.password_repeat=la password non coincide
+error.password.incorrect=password non esatta
 error.repeat=non corrisponde
 error.complete=campo non completo
 error.select=selezionare almeno un valore     
 error.username.duplicated=username già registrato nel sistema
 error.email.duplicated=email già registrata nel sistema
-error.cfPiva.duplicated=il codice fiscale e/o partita iva risulta già registrato nel sistema
+error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
+error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.name.duplicated=nome già registrato
+error.maxFileSize=dimensione max {0} MB
+
+######### ACCREDITAMENTI #########
+label.nuova_domanda=Nuova domanda
+label.accreditamenti_lista=Domande di accreditamento presentate
+label.accreditamento_nome=Nome
+label.accreditamento_stato=Stato
+label.accreditamento_invio=Data invio
+label.accreditamento_validazione=Data validazione
+label.accreditamento_mesi_validita=Validità (mesi)
+label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
+label.sezione=Sezione
+label.stato=Stato
+label.dati_del_organizzatore=Dati dell'Organizzatore
+label.dati_dei_responsabili=Dati dei Responsabili
+label.allegati=Allegati
+label.allegati=Allegati
+
+label.dati_attività=Dati dell'attività
+label.accreditamento_tipologia=Accreditamento per tipologia
+label.tipologia_generale=Generale
+label.tipologia_settoriale=Settoriale
+label.procedure_formative=Procedure formative
+label.FAD=formazione a distanza (FAD)
+label.FSC=formazione sul campo (FSC)
+label.RES=formazione residenziale (RES)
+label.accreditamento_professioni=Accreditamento per professioni
+label.dati_economici=Dati economici
+label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
+label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni (in migliaia di euro)
+label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
+label.tempo_indeterminato=Tempo indeterminato
+label.altro_personale=Altro personale
+
+######### PERSONE #########
+label.dati_legale=Dati del legale
+label.ruolo=Ruolo
+label.file_nome=File
+label.file_descrizione=Descrizione
+
+######### ORGANIZZAZIONE #########
+label.ragione_sociale=Ragione sociale
+label.organizzazione_natura=Natura dell'organizzazione
+label.pubblica=Pubblica
+label.privata=Privata
+label.no_profit=Società no-profit
+label.sì=Sì
+label.no=No
+label.sito_internet=Sito internet
+label.salva=Salva
+
+######### SEDE #########
+label.sede_di=Sede di 
+label.comune=Comune
+label.provincia=Provincia
+label.indirizzo=Indirizzo
+label.tel_secondario=Telefono secondario
+label.fax=FAX
+label.cap=CAP
+label.regione=Regione
  
