Ordinamento alfabetico delle label messages.properties
pulizia delle label doppie

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,185 +1,161 @@
 ######## LABEL ########
-app.title=ECM - Regione Veneto
-app.title_short=ECM
-
-######## MAIN #######
-label.sei_un_nuovo_provider=Sei un nuovo provider?
-label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
-label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
-label.hai_gia_account=Hai già un account?
-label.info_account=Accedi all'area riservata
-
-######## LOGIN ########
-label.accedi=Accedi
-label.ricordami=Ricordami
-label.registrati=Registrati
-label.password_dimenticata=Hai dimenticato la password?
-label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
-label.errore_login=Username e/o password errati
-label.recupera_password=Recupera password
-label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
-label.invia=Invia
-label.error=Errore
-label.error_page_title=Ops! Si è verificato un errore
-label.home=Torna alla Home
-
-######## HOME ########
-label.benvenuto=Benvenuto
-label.registrazione_provider=Registrazione Provider
-label.profilo=Profilo
-label.info_provider=Info provider
-label.provider=Provider
-label.iter_accreditamento=Iter Accreditamento
-label.eventi=Eventi
-label.piano_formativo=Piano Formativo
-label.relazione_annuale=Relazione Annuale
-label.contributo_annuale=Contributo Annuale
-label.comunicazioni=Comunicazioni
-label.gestione_utenti=Gestione Utenti
-label.gestione_password=Gestione Password
-
-
-######## REGISTRAZIONE PROVIDER ########
-label.avanti=avanti
-label.indietro=indietro
-label.invia=invia
-label.credenziali_accesso=Credenziali d'accesso
-label.dati_del_richiedente=Richiedente
-label.dati_del_provider=Dati del provider
-label.dati_del_legale_rappresentante=Legale rappresentante
-label.nome_utente=Nome Utente
-label.email=E-mail
-label.nome=Nome
-label.cognome=Cognome
-label.codice_fiscale=Codice Fiscale
-label.incarico_presso_la_struttura=Incarico presso la struttura
-label.telefono=Telefono
-label.delega=Delega
-label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
-label.legale_rappresentante=Legale Rappresentante
-label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
-label.tipo_organizzatore=Tipo Organizzatore
-label.denominazione_legale=Denominazione Legale
-label.partita_iva=Partita IVA
-label.cf=CF
-label.piva=PIVA
-label.pec=PEC
-label.cellulare=Cellulare
-label.seleziona=Seleziona...
-label.conferma=Conferma
-label.crea_account=Crea Account
-label.aggiorna_account=Aggiorna Account
-label.gruppo=Gruppo
-
-######### UTENTI ########
-label.utenti=Utenti
-label.segreteria=Segreteria
-label.profili=Profili
-label.id=Id
-label.username=Username
-label.enabled=Abilitato
-label.not_enabled=Disabilitato
-label.locked=Bloccato
-label.creazione_utente=Creazione Utente
-label.modifica_utente=Modifica Utente
-label.annulla=Annulla
-label.stato_account=Stato Account
-label.modifica_profilo=Modifica Profilo
-label.creazione_profilo=Creazione Profilo
-label.permessi=Permessi
-label.nuovo=Nuovo
-label.cambia_password=Cambia password
-label.cambio_password=Cambio password
-label.password_corrente=Password corrente
-label.nuova_password=Nuova Password
-label.conferma_password=Conferma Password
-
-label.sede_legale=Sede Legale
-label.sede_operativa=Sede Operativa
-label.coincide_con_sede_legale=Coincide con Sede Legale
-
-######### VALIDATOR ERROR MESSAGE #########
-error.invalid=formato non corretto
-error.empty=campo obbligatorio
+Email=email non valida
 NotEmpty=campo obbligatorio
 NotNull=campo obbligatorio
-error.min=valore troppo corto
-error.max=valore troppo lungo
-error.number_min=valore inferiore al valore minimo consentito
-error.number_max=valore superiore al valore massimo consentito
-error.url=URL errato
-error.number=il valore deve essere numerico
-error.email=email non valida
-Email=email non valida
-error.email_repeat=l'email deve coincidere
-error.password_repeat=la password non coincide
-error.password.incorrect=password non esatta
-error.repeat=non corrisponde
-error.complete=campo non completo
-error.select=selezionare almeno un valore     
-error.username.duplicated=username già registrato nel sistema
-error.email.duplicated=email già registrata nel sistema
-error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
+app.title=ECM - Regione Veneto
+app.title_short=ECM
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
-error.name.duplicated=nome già registrato
+error.complete=campo non completo
+error.email.duplicated=email già registrata nel sistema
+error.email=email non valida
+error.email_repeat=l'email deve coincidere
+error.empty=campo obbligatorio
+error.invalid=formato non corretto
+error.max=valore troppo lungo
 error.maxFileSize=dimensione max {0} MB
-
-######### ACCREDITAMENTI #########
-label.nuova_domanda=Nuova domanda
-label.accreditamenti_lista=Domande di accreditamento presentate
-label.accreditamento_nome=Nome
-label.accreditamento_stato=Stato
-label.accreditamento_invio=Data invio
-label.accreditamento_validazione=Data validazione
-label.accreditamento_mesi_validita=Validità (mesi)
-label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
-label.sezione=Sezione
-label.stato=Stato
-label.dati_del_organizzatore=Dati dell'Organizzatore
-label.dati_dei_responsabili=Dati dei Responsabili
-label.allegati=Allegati
-label.allegati=Allegati
-
-label.dati_attività=Dati dell'attività
-label.accreditamento_tipologia=Accreditamento per tipologia
-label.tipologia_generale=Generale
-label.tipologia_settoriale=Settoriale
-label.procedure_formative=Procedure formative
+error.min=valore troppo corto
+error.name.duplicated=nome già registrato
+error.number=il valore deve essere numerico
+error.number_max=valore superiore al valore massimo consentito
+error.number_min=valore inferiore al valore minimo consentito
+error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
+error.password.incorrect=password non esatta
+error.password_repeat=la password non coincide
+error.repeat=non corrisponde
+error.select=selezionare almeno un valore     
+error.url=URL errato
+error.username.duplicated=username già registrato nel sistema
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
+label.accedi=Accedi
+label.accreditamenti_lista=Domande di accreditamento presentate
+label.accreditamento_invio=Data invio
+label.accreditamento_mesi_validita=Validità (mesi)
+label.accreditamento_nome=Nome
 label.accreditamento_professioni=Accreditamento per professioni
+label.accreditamento_stato=Stato
+label.accreditamento_tipologia=Accreditamento per tipologia
+label.accreditamento_validazione=Data validazione
+label.aggiorna_account=Aggiorna Account
+label.allegati=Allegati
+label.allegati=Allegati
+label.altro_personale=Altro personale
+label.annulla=Annulla
+label.avanti=avanti
+label.benvenuto=Benvenuto
+label.cambia_password=Cambia password
+label.cambio_password=Cambio password
+label.cap=CAP
+label.cellulare=Cellulare
+label.cf=CF
+label.codice_fiscale=Codice Fiscale
+label.cognome=Cognome
+label.coincide_con_sede_legale=Coincide con Sede Legale
+label.comune=Comune
+label.comunicazioni=Comunicazioni
+label.conferma=Conferma
+label.conferma_password=Conferma Password
+label.contributo_annuale=Contributo Annuale
+label.crea_account=Crea Account
+label.creazione_profilo=Creazione Profilo
+label.creazione_utente=Creazione Utente
+label.credenziali_accesso=Credenziali d'accesso
+label.dati_attività=Dati dell'attività
+label.dati_del=Dati del
+label.dati_dei_responsabili=Dati dei Responsabili
+label.dati_del_legale_rappresentante=Legale rappresentante
+label.dati_del_organizzatore=Dati dell'Organizzatore
+label.dati_del_provider=Dati del provider
+label.dati_del_richiedente=Richiedente
 label.dati_economici=Dati economici
+label.dati_legale=Dati del legale
+label.delega=Delega
+label.denominazione_legale=Denominazione Legale
+label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
+label.email=E-mail
+label.enabled=Abilitato
+label.error=Errore
+label.error_page_title=Ops! Si è verificato un errore
+label.errore_login=Username e/o password errati
+label.eventi=Eventi
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni (in migliaia di euro)
-label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
-label.tempo_indeterminato=Tempo indeterminato
-label.altro_personale=Altro personale
-
-######### PERSONE #########
-label.dati_legale=Dati del legale
-label.ruolo=Ruolo
-label.file_nome=File
-label.file_descrizione=Descrizione
-
-######### ORGANIZZAZIONE #########
-label.ragione_sociale=Ragione sociale
-label.organizzazione_natura=Natura dell'organizzazione
-label.pubblica=Pubblica
-label.privata=Privata
-label.no_profit=Società no-profit
-label.sì=Sì
-label.no=No
-label.sito_internet=Sito internet
-label.salva=Salva
-
-######### SEDE #########
-label.sede_di=Sede di 
-label.comune=Comune
-label.provincia=Provincia
-label.indirizzo=Indirizzo
-label.tel_secondario=Telefono secondario
 label.fax=FAX
-label.cap=CAP
+label.file_descrizione=Descrizione
+label.file_nome=File
+label.gestione_password=Gestione Password
+label.gestione_utenti=Gestione Utenti
+label.gruppo=Gruppo
+label.hai_gia_account=Hai già un account?
+label.home=Torna alla Home
+label.id=Id
+label.incarico_presso_la_struttura=Incarico presso la struttura
+label.indietro=indietro
+label.indirizzo=Indirizzo
+label.info_account=Accedi all'area riservata
+label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
+label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
+label.info_provider=Info provider
+label.invia=Invia
+label.iter_accreditamento=Iter Accreditamento
+label.legale_rappresentante=Legale Rappresentante
+label.locked=Bloccato
+label.modifica_profilo=Modifica Profilo
+label.modifica_utente=Modifica Utente
+label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
+label.no=No
+label.no_profit=Società no-profit
+label.nome=Nome
+label.nome_utente=Nome Utente
+label.not_enabled=Disabilitato
+label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
+label.nuova_domanda=Nuova domanda
+label.nuova_password=Nuova Password
+label.nuovo=Nuovo
+label.organizzazione_natura=Natura dell'organizzazione
+label.partita_iva=Partita IVA
+label.password_corrente=Password corrente
+label.password_dimenticata=Hai dimenticato la password?
+label.pec=PEC
+label.permessi=Permessi
+label.piano_formativo=Piano Formativo
+label.piva=PIVA
+label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
+label.privata=Privata
+label.procedure_formative=Procedure formative
+label.profili=Profili
+label.profilo=Profilo
+label.provider=Provider
+label.provincia=Provincia
+label.pubblica=Pubblica
+label.ragione_sociale=Ragione sociale
+label.recupera_password=Recupera password
 label.regione=Regione
- 
+label.registrati=Registrati
+label.registrazione_provider=Registrazione Provider
+label.relazione_annuale=Relazione Annuale
+label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
+label.ricordami=Ricordami
+label.ruolo=Ruolo
+label.salva=Salva
+label.sede_di=Sede di 
+label.sede_legale=Sede Legale
+label.sede_operativa=Sede Operativa
+label.segreteria=Segreteria
+label.sei_un_nuovo_provider=Sei un nuovo provider?
+label.seleziona=Seleziona...
+label.sezione=Sezione
+label.sito_internet=Sito internet
+label.stato=Stato
+label.stato_account=Stato Account
+label.sì=Sì
+label.tel_secondario=Telefono secondario
+label.telefono=Telefono
+label.tempo_indeterminato=Tempo indeterminato
+label.tipo_organizzatore=Tipo Organizzatore
+label.tipologia_generale=Generale
+label.tipologia_settoriale=Settoriale
+label.username=Username
+label.utenti=Utenti
+label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
