Aggiunte le laber per personaEdit
professione, checkbox flag straniero e i 3 allegati

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -158,3 +158,8 @@ label.tipologia_settoriale=Settoriale
 label.username=Username
 label.utenti=Utenti
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
+label.cf_straniero=Ha un codice fiscale non italiano
+label.professione=Professione
+label.atto_nomina=Atto di nomina
+label.curriculum_vitae=Curriculum vitae
+label.atto_delega=Atto di delega
