personaWrapper work in progress

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -75,6 +75,7 @@ label.dati_del_richiedente=Richiedente
 label.dati_economici=Dati economici
 label.dati_legale=Dati del legale
 label.delega=Delega
+label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.denominazione_legale=Denominazione Legale
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.email=E-mail
