Creato il file providerList e le relative labels

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -108,6 +108,7 @@ label.legale_rappresentante=Legale Rappresentante
 label.locked=Bloccato
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
+label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.no=No
 label.no_profit=Società no-profit
@@ -118,6 +119,7 @@ label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.nuova_domanda=Nuova domanda
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
+label.nuovo_provider=Nuovo provider
 label.organizzazione_natura=Natura dell'organizzazione
 label.partita_iva=Partita IVA
 label.password_corrente=Password corrente
@@ -134,6 +136,7 @@ label.professione=Professione
 label.profili=Profili
 label.profilo=Profilo
 label.provider=Provider
+label.provider_lista=Lista dei provider
 label.provincia=Provincia
 label.pubblica=Pubblica
 label.ragione_sociale=Ragione sociale
