--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,3 +1,4 @@
+
 ######## LABEL ########
 Email=email non valida
 NotEmpty=campo obbligatorio
@@ -52,6 +53,7 @@ label.cap=CAP
 label.cellulare=Cellulare
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
+label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
@@ -92,6 +94,7 @@ label.file_nome=File
 label.gestione_password=Gestione Password
 label.gestione_utenti=Gestione Utenti
 label.gruppo=Gruppo
+label.gruppo_appartenenza=Gruppo di appartenenza
 label.hai_gia_account=Hai già un account?
 label.home=Torna alla Home
 label.id=Id
