precedenza alla partita IVA in providerList

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -53,7 +53,7 @@ label.cap=CAP
 label.cellulare=Cellulare
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
-label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
+label.IvaOrCodiceFiscale=Partita IVA / Codice fiscale
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
