--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,6 +36,7 @@ label.accreditamento_nome=Nome
 label.accreditamento_professioni=Accreditamento per professioni
 label.accreditamento_scadenza=Data Scadenza
 label.accreditamento_stato=Stato
+label.accreditamento_tipo=Tipologia
 label.accreditamento_tipologia=Accreditamento per tipologia
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
