Completato il template di accreditamentoEdit
-aggiunti i file css e js per bootstrap-select
-modificato SecurityConfig.java appositamente
-modificato l'header e il footer per includere i nuovi file
-aggiunta qualche label necessaria al template
-modificato il template accreditamentoEdit preesistente

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -28,6 +28,7 @@ error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
+label.IvaOrCodiceFiscale=Partita IVA / Codice fiscale
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
 label.accreditamenti_lista=Domande di accreditamento presentate
@@ -54,7 +55,6 @@ label.cap=CAP
 label.cellulare=Cellulare
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
-label.IvaOrCodiceFiscale=Partita IVA / Codice fiscale
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
@@ -92,6 +92,7 @@ label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del 
 label.fax=FAX
 label.file_descrizione=Descrizione
 label.file_nome=File
+label.generale=Generale
 label.gestione_password=Gestione Password
 label.gestione_utenti=Gestione Utenti
 label.gruppo=Gruppo
@@ -137,6 +138,7 @@ label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.privata=Privata
 label.procedure_formative=Procedure formative
 label.professione=Professione
+label.professioni=Professioni
 label.profili=Profili
 label.profilo=Profilo
 label.provider=Provider
@@ -160,6 +162,7 @@ label.sedi=Sedi
 label.segreteria=Segreteria
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
+label.settoriale=Settoriale
 label.sezione=Sezione
 label.sito_internet=Sito internet
 label.stato=Stato
@@ -169,8 +172,6 @@ label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
-label.tipologia_generale=Generale
-label.tipologia_settoriale=Settoriale
 label.username=Username
 label.utenti=Utenti
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
