fix label codiceFiscaleOrIVA

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -28,7 +28,6 @@ error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
 label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
-label.IvaOrCodiceFiscale=Partita IVA / Codice fiscale
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
 label.accreditamenti_lista=Domande di accreditamento presentate
@@ -55,6 +54,7 @@ label.cap=CAP
 label.cellulare=Cellulare
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
+label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA 
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
