n-esima prova git

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -175,3 +175,4 @@ label.tipo_organizzatore=Tipo Organizzatore
 label.username=Username
 label.utenti=Utenti
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
+label.daTogliere=TOGLIMI
