Modifica nella gestione degli allegati in personaEdit

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -148,7 +148,7 @@ label.pubblica=Pubblica
 label.ragione_sociale=Ragione sociale
 label.recupera_password=Recupera password
 label.regione=Regione
-label.registrati=Registrati
+label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
