Work in progress AccreditamentoWrapper

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -181,3 +181,4 @@ label.tipo_organizzatore=Tipo Organizzatore
 label.username=Username
 label.utenti=Utenti
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
+message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
