Bugfix e migliorie varie

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -30,6 +30,7 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
+label.accreditamento=Accreditamento
 label.accreditamenti_lista=Domande di accreditamento presentate
 label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
@@ -68,6 +69,7 @@ label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
 label.credenziali_accesso=Credenziali d'accesso
 label.cv=Curriculum vitae
+label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
 label.dati_del=Dati del
@@ -76,6 +78,7 @@ label.dati_del_organizzatore=Dati dell'Organizzatore
 label.dati_del_provider=Dati del provider
 label.dati_del_richiedente=Richiedente
 label.dati_economici=Dati economici
+label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale=Dati del legale
 label.delega=Delega
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
@@ -107,6 +110,7 @@ label.info_account=Accedi all'area riservata
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Info provider
+label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.invia=Invia
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
@@ -153,11 +157,13 @@ label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
 label.responsabile=Responsabile
+label.responsabili=Responsabili
 label.responsabile_amministrativo=Responsabile Amministrativo
 label.responsabile_qualita=Responsabile della Qualità
 label.responsabile_segreteria=Responsabile di Segreteria
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.ricordami=Ricordami
+label.richiesta_accreditamento=Richiesta Accreditamento
 label.ruolo=Ruolo
 label.salva=Salva
 label.sede_di=Sede di 
