--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -30,8 +30,8 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
-label.accreditamento=Accreditamento
 label.accreditamenti_lista=Domande di accreditamento presentate
+label.accreditamento=Accreditamento
 label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
 label.accreditamento_nome=Nome
@@ -117,6 +117,7 @@ label.legale_rappresentante=Legale Rappresentante
 label.locked=Bloccato
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
+label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.no=No
@@ -157,15 +158,16 @@ label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
 label.responsabile=Responsabile
-label.responsabili=Responsabili
 label.responsabile_amministrativo=Responsabile Amministrativo
 label.responsabile_qualita=Responsabile della Qualità
 label.responsabile_segreteria=Responsabile di Segreteria
 label.responsabile_sistema_informatico=Responsabile Sistema Informatico
-label.ricordami=Ricordami
+label.responsabili=Responsabili
 label.richiesta_accreditamento=Richiesta Accreditamento
+label.ricordami=Ricordami
 label.ruolo=Ruolo
 label.salva=Salva
+label.scegli_file=Scegli file
 label.sede_di=Sede di 
 label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
@@ -180,7 +182,7 @@ label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
 label.sì=Sì
-label.tel_secondario=Telefono secondario
+label.tel_secondario=Telefono secondarioeleziona
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
