--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -182,7 +182,7 @@ label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
 label.sì=Sì
-label.tel_secondario=Telefono secondarioeleziona
+label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
@@ -190,3 +190,4 @@ label.username=Username
 label.utenti=Utenti
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
+message.errore=Errore
