--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -84,6 +84,7 @@ label.delega=Delega
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.denominazione_legale=Denominazione Legale
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
+label.disciplina=Disciplina
 label.email=E-mail
 label.enabled=Abilitato
 label.error=Errore
@@ -186,6 +187,7 @@ label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
+label.tutte="Tutte"
 label.username=Username
 label.utenti=Utenti
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
