Bugfix gestione allegati DatiEconomici

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -49,6 +49,7 @@ label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
 label.avanti=avanti
 label.benvenuto=Benvenuto
+label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
 label.cap=CAP
@@ -90,6 +91,7 @@ label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
+label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni (in migliaia di euro)
