aggiunte delle label per gli allegati

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -98,6 +98,7 @@ label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del 
 label.fax=FAX
 label.file_descrizione=Descrizione
 label.file_nome=File
+label.funzionigramma=Funzionigramma
 label.generale=Generale
 label.gestione_password=Gestione Password
 label.gestione_utenti=Gestione Utenti
@@ -133,6 +134,7 @@ label.nuova_domanda=Nuova domanda
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
 label.nuovo_provider=Nuovo provider
+label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
 label.partita_iva=Partita IVA
 label.password_corrente=Password corrente
@@ -159,6 +161,7 @@ label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
 label.relazione_annuale=Relazione Annuale
+label.required_fatturato=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato soprastanti)
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
 label.responsabile=Responsabile
 label.responsabile_amministrativo=Responsabile Amministrativo
