bugfix e aggiunta label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,6 +45,7 @@ label.aggiorna_account=Aggiorna Account
 label.allegati=Allegati
 label.altro_personale=Altro personale
 label.annulla=Annulla
+label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
 label.avanti=avanti
@@ -84,6 +85,7 @@ label.dati_legale=Dati del legale
 label.delega=Delega
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.denominazione_legale=Denominazione Legale
+label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.email=E-mail
@@ -91,6 +93,8 @@ label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
+label.esempio=Link per il download dell'esempio di allegato
+label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
@@ -142,6 +146,7 @@ label.password_dimenticata=Hai dimenticato la password?
 label.pec=PEC
 label.permessi=Permessi
 label.persone=Persone
+label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
@@ -183,6 +188,7 @@ label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
 label.settoriale=Settoriale
 label.sezione=Sezione
+label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
 label.sito_internet=Sito internet
 label.stato=Stato
 label.stato_account=Stato Account
@@ -195,6 +201,7 @@ label.tipo_organizzatore=Tipo Organizzatore
 label.tutte="Tutte"
 label.username=Username
 label.utenti=Utenti
+label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.errore=Errore
