aggiunte Label allegati

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -43,6 +43,7 @@ label.accreditamento_tipologia=Accreditamento per tipologia
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
 label.allegati=Allegati
+label.allegato=Allegato
 label.altro_personale=Altro personale
 label.annulla=Annulla
 label.attoCostitutivo=Atto Costitutivo e statuto
@@ -93,7 +94,7 @@ label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
-label.esempio=Link per il download dell'esempio di allegato
+label.esempio=Modello per il file allegato di:
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
