Fix grafico degli allegatiEdit + aggiunta label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,4 +1,3 @@
-
 ######## LABEL ########
 Email=email non valida
 NotEmpty=campo obbligatorio
@@ -94,7 +93,7 @@ label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
-label.esempio=Modello per il file allegato di:
+label.esempio_modello=Modello di esempio
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
