aggiunte label dei messaggi notify

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -204,4 +204,13 @@ label.utenti=Utenti
 label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
-message.errore=Errore
+message.inserire_campi_required=Si prega di inserire tutti i campi obbligatori.
+message.errore=Si è verificato un errore!
+message.completato=Operazione effettuata!
+message.inserito=L'elemento è stato salvato con successo.
+message.password_cambiata=La password è stata cambiata con successo.
+message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
+message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
+message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
+message.provider_salvato=Il dati del provider sono stati salvati con successo.
+message.provider_salvato=Il dati relativi alla sede sono stati salvati con successo.
