modifica alla label di errore del validatore

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -208,7 +208,7 @@ message.completato=Operazione effettuata!
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.errore=Si è verificato un errore!
-message.inserire_campi_required=Si prega di inserire tutti i campi obbligatori.
+message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=L'elemento è stato salvato con successo.
 message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
