bug fix nelle label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -213,4 +213,4 @@ message.inserito=L'elemento è stato salvato con successo.
 message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
-message.provider_salvato=Il dati relativi alla sede sono stati salvati con successo.
+message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
